public class AnimPlayer
{
    public static string Run = "Run";
    public static string Jump = "Jump";
    public static string Flame = "Flame";
    public static string Attack_1 = "Attack_1";
    public static string Attack_2 = "Attack_2";
    public static string FireBall = "FireBall";
}
public class AnimEnemy
{
    public static string Run = "Run";
    public static string Attack = "Attack";
    public static string Die = "Die";
    public static string Idle = "Idle";
    public static string Hurt = "Hurt";
}
public class AnimAttackPoint
{
    public static string Attack_2 = "Attack_2";
    public static string FireBall = "FireBall";
    public static string Flame = "Flame";
}
public class Tag
{
    public static string Ladder = "Ladder";
    public static string Player = "Player";
    public static string Enemy = "Enemy";
}